[package]
name = "raylib-plain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib-plain-sys = { version = "0.1.0", path = "../raylib-plain-sys" }

[build-dependencies]
raylib-plain-common = { version = "0.1.0", path = "../raylib-plain-common" }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
regex = "1.8.4"
convert_case = "0.6.0"
