[package]
name = "raylib-rs-plain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib-rs-plain-sys = { version = "0.1.0", path = "../raylib-rs-plain-sys" }

[build-dependencies]
raylib-rs-plain-common = { version = "0.1.0", path = "../raylib-rs-plain-common" }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
regex = "1.8.4"
convert_case = "0.6.0"
